# subscription-reasoning-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: fast-vs-standard-autonomous.toml  fast-vs-standard-longloop.toml  research-matrix.toml  research-smoke.toml  smoke.toml  subscription-matrix.toml
docs/: benchmark-design.md  long-horizon-research.md  progress.md  related-benchmarks.md
examples/: smoke-suite.jsonl
examples/research-longloop-pilot/: README.md  autonomous.toml  generate_data.py  grader.py  objective-autonomous.md  objective.md  task.toml
examples/research-longloop-pilot/starter/: README.md  solution.py
examples/research-toy/: grader.py  objective.md  task.toml
examples/research-toy/starter/: README.md  solution.py  train.csv
src/subscription_reasoning_bench/: __init__.py  cli.py  models.py  reporting.py  research_metrics.py  research_reporting.py  research_runner.py  research_tasks.py  runner.py  scoring.py  server.py  suites.py
src/subscription_reasoning_bench/adapters/: __init__.py  base.py  claude.py  codex.py
src/subscription_reasoning_bench/ui/: app.js  index.html  styles.css
tests/: test_adapters.py  test_cli.py  test_reporting.py  test_research_metrics.py  test_research_pilot_grader.py  test_research_reporting.py  test_research_runner.py  test_research_tasks.py  test_runner.py  test_scoring.py  test_server.py  test_suites.py
